# seqformat

./: .gitignore  Cargo.toml  README.md  RESUME.md  STATUS.md
bench/: benchmark.sh  manyseq.sh  webseq.sh
src/: bptree.rs  error.rs  fasta.rs  fourbit.rs  generate.rs  io.rs  lib.rs  main.rs  samtools.rs  seq.rs  source.rs  twobit.rs  twobyte.rs
